# Heart-Disease-Prediction-System

./: .gitignore  README.md  pyproject.toml
data/processed/: heart_disease_results.csv
notebooks/: exploration.ipynb
scripts/: train.py
src/heart_disease_classifier/: __init__.py  pipeline.py
src/heart_disease_classifier/data/: __init__.py  loader.py
src/heart_disease_classifier/evaluation/: __init__.py  metrics.py
src/heart_disease_classifier/models/: __init__.py  trainer.py
src/heart_disease_classifier/preprocessing/: __init__.py  pipeline.py
src/heart_disease_classifier/utils/: __init__.py  logging.py  persistence.py
tests/: test_evaluation.py  test_models.py  test_preprocessing.py
